--- a/templates/sidebar_main.html
+++ b/templates/sidebar_main.html
@@ -54,7 +54,7 @@
         <span>{% trans "Messaging" %}</span>
         {% if UNREAD_MESSAGE %}
         <span class="pull-right-container">
-            <span class="label bg-green pull-right">{{ UNREAD_MESSAGE }}</span>
+            <span class="label bg-red pull-right">{{ UNREAD_MESSAGE }}</span>
         </span>
         {% endif %}
     </a>
