--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,7 @@
                         <li class="dropdown messages-menu" id="navmessages">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-comment-o"></i>
-                                <span class="label bg-green" id="chatindicator"></span>
+                                <span class="label bg-red" id="chatindicator"></span>
                             </a>
                         </li>
                          <!--Notifications: style can be found in dropdown.less-->
