--- a/templates/landing_base.html
+++ b/templates/landing_base.html
@@ -148,7 +148,7 @@
 			<div class="overlay">
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-md-4 wow fadeInUp" data-wow-delay="0.6s">
+						<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
 							<div class="col-md-12">
 								<div class="link-wrapper">
 									<h2>{% trans "Links" %}</h2>
@@ -177,7 +177,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 wow fadeInUp" data-wow-delay="0.6s">
+						<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
 							<div class="col-md-12">
 								<h2>{% trans "Contact" %}</h2>
 								<h4>Ekata Social LLC</h4>
@@ -191,7 +191,7 @@
 								</address>
 							</div>
 						</div>
-						<div class="col-md-4 wow fadeInUp contactform" data-wow-delay="0.6s">
+						<div class="col-md-4 col-sm-10 col-sm-offset-1 col-md-offset-0 wow fadeInUp contactform" data-wow-delay="0.6s">
 							<div class="contact-form">
 								<form action="." method="post">
 									{% csrf_token %}
