--- a/templates/base.html
+++ b/templates/base.html
@@ -356,7 +356,7 @@
         <!-- /.content-wrapper -->
         <footer class="main-footer">
             <div class="pull-right hidden-xs">
-                <b><small class="label bg-green">Experimental</small> v1.2.4 </b>
+                <b><small class="label {{ VERSION_COLOR }}">{{ VERSION_NAME }}</small> v{{ VERSION_NUMBER }} </b>
             </div>
             <strong>Copyright &copy; 2014-2016 <a href="/">Ekata</a>.</strong> All rights
             reserved.
