--- a/templates/base.html
+++ b/templates/base.html
@@ -901,17 +901,17 @@
     </script>
     {% block extrascripts %}
     {% endblock extrascripts %}
-    <!--<script type="text/javascript">
+    <script type="text/javascript">
         (function() {
             var s = document.createElement("script");
             s.type = "text/javascript";
             s.async = true;
             s.src = '//api.usersnap.com/load/'+
-                    'cea783fd-6149-4650-9209-fff4d238a53a.js';
+                '41f43a68-14ce-4085-b6ef-58aa08f57ee0.js';
             var x = document.getElementsByTagName('script')[0];
             x.parentNode.insertBefore(s, x);
         })();
-    </script>-->
+    </script>
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async='async'></script>
     <script>
     var OneSignal = window.OneSignal || [];
