--- a/templates/groupsystem/joined_group.html
+++ b/templates/groupsystem/joined_group.html
@@ -25,7 +25,7 @@
                 <button class="btn btn-primary"><i class="fa fa-plus-circle"></i> {% trans "Create Group" %}</button>
             </div>
         </div>
-    </div>    
+    </div>
     {% endcomment %}
     <div class="row" style="margin-top:10px">
         <div class="col-md-12">
@@ -54,7 +54,7 @@
 {% endblock content %}
 {% block extrascripts %}
     <script>
-        $("input[name='qgroup'").keyup(function(){
+        $("input[name='qgroup']").keyup(function(){
             var query = $(this).val();
             $("#group-wrapper").load(
                 "{% url 'g:joinedgroups' %}?qgroup=" + encodeURIComponent(query)
