--- a/templates/invitationsystem/checkinvitation.html
+++ b/templates/invitationsystem/checkinvitation.html
@@ -13,7 +13,7 @@
                             <h1 class="newshome-header">{% trans "Get access to ekata beta" %}</h1>
                             {% if request.user.profile.invitation_verified %}
                                 <p>
-                                    You already verified your invitation
+                                    You've already verified your invitation
                                 </p>
                                 <a style="color:#fff;" href="{% url 'dashboard:index' %}">Click here to go to dashboard</a>
                             {% else %}
@@ -22,6 +22,7 @@
                                 {{ form|as_bootstrap }}
                                 <button type="submit" name="button" class="btn btn-primary">{% trans "Submit" %}</button>
                             </form>
+                            <a style="color: #fff; margin-top:20px;" href="{% url 'invitationsystem:index' %}">Click here to get an invitation id</a>
                             {% endif %}
                         </div>
                     </div>
